corrigindo o nome do  produto HOT STEP

--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
                                 </div>
                             </div>
                             <div class="card-img-overlay">
-                                <h4 class="card-title">NOCTA H'OT STEP</h4>
+                                <h4 class="card-title">NOCTA HOT STEP</h4>
                             </div>
                         </div>
                     </div>
